--- a/index.html
+++ b/index.html
@@ -2,12 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <meta name="description" content="Assignment portal for Lexi Carver in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <title>Lexi Carver | Assignment Portal</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/dates.js"></script>
 </head>
 <body>
-    <h1>Testing</h1>
-    <footer>Hello World!</footer>
+  <div id=content>
+    <header>
+      <img class="header-img" src="images/lexi-carver.jpg" alt="Lexi Carver smiling" width="110">
+      <h1>Lexi Carver</h1>
+    </header>
+    <main>
+      <h2>WDD 230: Assignment Portal</h2>
+    <div class="lesson-links">
+      <ul>
+        <li>Lesson 02: <a href="#">Title</a></li>
+        <li>Lesson 03: <a href="#">Title</a></li>
+        <li>Lesson 04: <a href="#">Title</a></li>
+        <li>Lesson 05: <a href="#">Title</a></li>
+        <li>Lesson 06: <a href="#">Title</a></li>
+        <li>Lesson 07: <a href="#">Title</a></li>
+        <li>Lesson 08: <a href="#">Title</a></li>
+        <li>Lesson 09: <a href="#">Title</a></li>
+        <li>Lesson 10: <a href="#">Title</a></li>
+        <li>Lesson 11: <a href="#">Title</a></li>
+        <li>Lesson 12: <a href="#">Title</a></li>
+      </ul>
+    </div>
+    </main>
+    <footer>
+      <p id="current_year"></p>
+      <p id="lastmod"></p>
+    </footer>
+  </div>
 </body>
 </html>
