--- a/index.html
+++ b/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Assignment portal for Lexi Carver in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <title>Lexi Carver | Assignment Portal</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/dates.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Assignment portal for Lexi Carver in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+  <title>Lexi Carver | WDD 230 | Assignment Portal</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <!-- link to normalize file:
+    <link rel="stylesheet" href="css/normalize.css">
+  -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/small.css">
+  <script defer src="js/dates.js"></script>
 </head>
 <body>
   <div id=content>
     <header>
-      <img class="header-img" src="images/lexi-carver.jpg" alt="Lexi Carver smiling" width="110">
+      <img class="header-img" src="images/lexi-carver.jpg" alt="Lexi Carver smiling">
       <h1>Lexi Carver</h1>
     </header>
     <main>
       <h2>WDD 230: Assignment Portal</h2>
     <div class="lesson-links">
       <ul>
-        <li>Lesson 02: <a href="#">Title</a></li>
+        <li>Lesson 02: <a href="lesson2/design-principles.html">Design Principles</a></li>
         <li>Lesson 03: <a href="#">Title</a></li>
         <li>Lesson 04: <a href="#">Title</a></li>
         <li>Lesson 05: <a href="#">Title</a></li>
