--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -18,14 +18,14 @@
   <div id="content">
     <header>
       <h1>Design Principles</h1>
-      <p>Lexi Carver</p>
+      <h2>Lexi Carver</h2>
     </header>
     <main>
       <div class="visual-hierarchy">
         <h2>Visual Hierarchy</h2>
         <p>Click Funnels</p>
         <a href="https://www.clickfunnels.com/">clickfunnels.com</a>
-        <img src="images/click-funnels.jpg" alt="A screenshot of Click Funnels' website displaying an example of visual heirarchy."></p>
+        <img src="images/click-funnels.jpg" alt="A screenshot of Click Funnels' website displaying an example of visual heirarchy.">
         <p>Click funnels does a great job at displaying visual hierarchy because it highlights the most import information first, and then slowly works its way to less important information. For example, the first text your eye is drawn to is "Sales Funnels", which lets you know what the page is about. Then your eye goes to "quickly create", so you know the main purpose of this page is to quickly create sales funnels. As your eye continues to disect the page, you gain a little more information as you go in order of importance.</p>
       </div> 
       <div class="contrast"> 
